--- a/Backend/OnlineShoppingWebProject/WebAPI/WebAPI.csproj
+++ b/Backend/OnlineShoppingWebProject/WebAPI/WebAPI.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Business\Business.csproj" />
     <ProjectReference Include="..\Data\Data.csproj" />
   </ItemGroup>
 
