--- a/Backend/.gitignore
+++ b/Backend/.gitignore
@@ -3,6 +3,10 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+# My ignores
+ArticleImages/
+ProfileImages/
+
 # User-specific files
 *.rsuser
 *.suo
