Profile, admin functionality

--- a/Frontend/web2-online-shop/.env
+++ b/Frontend/web2-online-shop/.env
@@ -12,3 +12,8 @@ REACT_APP_API_UPDATE_USER_URL=/user/user
 REACT_APP_API_CHANGE_PASSWORD_URL=/user/password
 REACT_APP_API_CHANGE_PROFILE_IMAGE_URL=/user/profile-image
 
+# Admin
+REACT_APP_API_ADMIN_ALL_SELLERS_URL=/admin/sellers
+REACT_APP_API_UPDATE_APPROVAL_STATUS_URL=/admin/seller-approval-status
+REACT_APP_API_ALL_ORDERS_URL=/admin/all-orders
+
