--- a/Frontend/web2-online-shop/.env
+++ b/Frontend/web2-online-shop/.env
@@ -16,4 +16,23 @@ REACT_APP_API_CHANGE_PROFILE_IMAGE_URL=/user/profile-image
 REACT_APP_API_ADMIN_ALL_SELLERS_URL=/admin/sellers
 REACT_APP_API_UPDATE_APPROVAL_STATUS_URL=/admin/seller-approval-status
 REACT_APP_API_ALL_ORDERS_URL=/admin/all-orders
+REACT_APP_API_ORDER_DETAILS_URL=/admin/order
 
+# Sellers
+REACT_APP_API_SELLER_ARTICLES_URL=/seller/articles
+REACT_APP_API_SELLER_PENDING_ORDERS_URL=/seller/pending-orders
+REACT_APP_API_SELLER_FINISHED_ORDERS_URL=/seller/finished-orders
+REACT_APP_API_SELLER_POST_ARTICLE_URL=/seller/article
+REACT_APP_API_SELLER_UPDATE_ARTICLE_URL=/seller/article
+REACT_APP_API_SELLER_GET_ARTICLE_DETAILS_URL=/seller/article
+REACT_APP_API_SELLER_UPDATE_ARTICLE_IMAGE_URL=/seller/product-image
+REACT_APP_API_SELLER_DELETE_ARTICLE_URL=/seller/article
+REACT_APP_API_ORDER_DETAILS_URL=/seller/order
+
+# Buyer
+REACT_APP_API_CUSTOMER_FINISHED_ORDERS_URL=/customer/finished-orders
+REACT_APP_API_CUSTOMER_PENDING_ORDERS_URL=/customer/pending-orders
+REACT_APP_API_CUSTOMER_ARTICLES_URL=/customer/articles
+REACT_APP_API_CUSTOMER_ORDER_URL=/customer/order
+REACT_APP_API_CUSTOMER_DELETE_ORDER=/customer/order
+REACT_APP_API_CUSTOMER_POST_ORDER_URL=/customer/order
