--- a/Frontend/web2-online-shop/.env
+++ b/Frontend/web2-online-shop/.env
@@ -16,7 +16,7 @@ REACT_APP_API_CHANGE_PROFILE_IMAGE_URL=/user/profile-image
 REACT_APP_API_ADMIN_ALL_SELLERS_URL=/admin/sellers
 REACT_APP_API_UPDATE_APPROVAL_STATUS_URL=/admin/seller-approval-status
 REACT_APP_API_ALL_ORDERS_URL=/admin/all-orders
-REACT_APP_API_ORDER_DETAILS_URL=/admin/order
+REACT_APP_API_ADMIN_ORDER_DETAILS_URL=/admin/order
 
 # Sellers
 REACT_APP_API_SELLER_ARTICLES_URL=/seller/articles
@@ -36,3 +36,6 @@ REACT_APP_API_CUSTOMER_ARTICLES_URL=/customer/articles
 REACT_APP_API_CUSTOMER_ORDER_URL=/customer/order
 REACT_APP_API_CUSTOMER_DELETE_ORDER=/customer/order
 REACT_APP_API_CUSTOMER_POST_ORDER_URL=/customer/order
+
+# Google
+REACT_APP_API_GOOGLE_LOGIN=/auth/google-login
