--- a/Backend/OnlineShoppingWebProject/WebAPI/WebAPI.csproj
+++ b/Backend/OnlineShoppingWebProject/WebAPI/WebAPI.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Google.Apis.Auth" Version="1.60.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
